<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Scalable Size</string>

    <string name="first_fragment_label">Normal</string>
    <string name="second_fragment_label">Scalable</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_dear">Hello dear!</string>

    <string name="char_stars" tools:ignore="MissingTranslation">★★★★★</string>
    <string name="char_lion" tools:ignore="MissingTranslation">𓃭</string>
</resources>