<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_43sdp"
            android:paddingTop="@dimen/_50sdp"
            android:paddingRight="@dimen/_43sdp"
            android:paddingBottom="@dimen/_27sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/char_lion"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_60ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/char_lion"
                android:textColor="#FFFFEB3B"
                android:textSize="@dimen/_100ssp" />

            <TextView
                android:id="@+id/give_us_a_review_landmine_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/_12sdp"
                android:includeFontPadding="false"
                android:text="@string/hello_dear"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/char_stars"
                android:textColor="#747474"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="#0ac775"
                android:gravity="center"
                android:includeFontPadding="false"
                android:minWidth="120dp"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:text="@string/previous"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15ssp"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>